# mold

./: .gitignore  Cargo.toml
assets/: cursors.ase  font_monospace.ase  hilbert512.ase  human.ase  logo.ase  skin0.ase  tileset.ase
mold_world/: Cargo.toml
mold_world/src/: lib.rs
mold_world/src/units/: elevation.rs  mod.rs  temperature.rs
mold_world/src/world/: cell.rs  coordinate.rs  ground.rs  mod.rs  tile.rs
resources/: bindings.ron  display_config.ron
src/: main.rs  mold.rs
src/display/: camera.rs
src/systems/: player.rs
tiled/: sample.tmx  sample.tsx
world/: Cargo.toml
world/src/: units.rs
world/src/world/: coordinate.rs  mod.rs  tile.rs
